# site-simples

./: .gitignore  CONTEXT.md  README.md  dev.sh  main.py  prototico.html  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
