[project]
name = "fastapi-app"
version = "0.1.0"
description = "Property Manager API — backend for corretores to manage a private inventory of imóveis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "testcontainers>=4",
]
